Fixed foramatting, updated library uses based on code review